Fix top offset on mobile devices.

--- a/dtg/static/css/style.css
+++ b/dtg/static/css/style.css
@@ -7,9 +7,11 @@
 ################################################################################
 */
 
-body {
-  position: relative;
-  padding-top: 70px;
+@media (min-width: 980px) {
+  body {
+    position: relative;
+    padding-top: 70px;
+  }
 }
 
 .selsortlist { list-style-type: none; margin: 0; padding: 0; }
